--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -11,26 +11,28 @@
   /* Secondary Palette */
   --color-secondary: #F9BA00;
   --color-secondary-light: #FFF3CE;
-  
+
   /* Tertiary Palette */
   --color-tertiary: #7E33E0;
   --color-tertiary-light: #F2F0FF;
-  
+
   /* Info */
   --color-info: #603EFF;
   --color-info: #DDD6FF;
-  
+
   /* Black & White */
   --color-white: #FFFFFF;
   --color-black: #101750;
-  
+
   --color-gray-1: #F8F8FD;
   --color-gray-2: #E5E0FC;
   --color-gray-3: #8A8FB9;
 
   /* Success */
   --color-success: #0CC562;
-  
+  --color-success-dark: #00994C;
+  --color-success-light: #92F2BF;
+
   /* Text */
   --color-text-primary: #101750;
   --color-text-secondary: #F1F1F1;
@@ -58,6 +60,54 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+
+  :visited {
+    color: inherit;
+  }
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+input {
+  border: none;
+  outline: none;
+
+  background-color: transparent;
+  box-shadow: none;
+
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+
+  padding: 0;
+  margin: 0;
+
+  box-sizing: border-box;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
