feat(HEK-5): implementa latest

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -63,6 +63,17 @@ h1 {
   text-transform: capitalize;
 }
 
+h2 {
+  font-family: Josefin Sans;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 44px;
+  line-height: 52px;
+  letter-spacing: 1.5%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
 h3 {
   font-family: Josefin Sans;
   font-weight: 700;
