--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -107,6 +107,9 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 a {
